Add `gradeQuiz` Function
